# openapi/src/main/resources/arena-sak-innsyn-api.yaml
@@ -113,9 +113,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/KvotebrukHendelse'
-        maksdato:
-          type: string
-          format: date
         sisteUtbetalingDato:
           type: string
           format: date
@@ -191,12 +188,14 @@ components:
     TelleverkForPerson:
       type: object
       properties:
-        ordineerAAPKvote:
+        dagpengePeriodeTeller:
           type: integer
-        utvidetAAPKvote:
+        maxPeriodePermittertTellerFisk:
+          type: integer
+        maxPeriodePermittertTeller:
           type: integer
       required:
-        - ordineerAAPKvote
+        - dagpengePeriodeTeller
 
     # data class KvotebrukHendelse(
     #    val id: Int,
